<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask"
    android:background="@color/colorWhite"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="50dip"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/newtask"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/new_task"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginBottom="15dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginStart="5dip" />


                <EditText
                    android:id="@+id/editTaskname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dip"
                    android:hint="@string/editTaskname"
                    android:inputType="textPersonName"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTaskdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTaskdescription"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="30dip"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tag_pick_location_to_get_your_current_location"
                    android:inputType="textMultiLine"
                    android:gravity="center"
                    android:lines="7"
                    />

                <Button
                    android:id="@+id/picklocation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dip"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/mylocation"
                    android:onClick="onClick"
                    android:paddingLeft="120dp"
                    android:paddingRight="120dp"
                    android:text="@string/pick_location"
                    android:textColor="@color/colorBlue"
                    android:drawableStart="@drawable/mylocation" />

                <TextView
                    android:id="@+id/textPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dip"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="125dp"                    >


                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:id="@+id/rgroup"
                        >
                        <RadioButton
                            android:id="@+id/high"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/high"
                            android:background="@color/colorRed"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight=".30"
                            />
                        <RadioButton
                            android:id="@+id/medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium"
                            android:background="@color/colorOrange"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight=".30"
                            />
                        <RadioButton
                            android:id="@+id/low"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/low"
                            android:background="@color/colorGreen"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight=".40"
                            />
                    </RadioGroup>

                </LinearLayout>


                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/colorBlue"
                    android:onClick="onClick"
                    android:text="@string/buttonAdd"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
